# flasky

./: .gitignore  .gitmodules  .requirements.txt.swo  .requirements.txt.swp  PChome.db  PChome.py  Procfile  Ruten.db  T01.xlsx  docker-compose.yml  flasky.pem  itemdb2.db  job.py  main.db  main.py  ndscheduler-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt  ruten.py  server.py  shopee.py  shopee2.py  test.py
mysqldb/: flaskdb_alembic_version.sql  flaskdb_itemname.sql  flaskdb_posts.sql  flaskdb_price.sql  flaskdb_roles.sql  flaskdb_shop.sql  flaskdb_trace.sql  flaskdb_trace_item.sql  flaskdb_users.sql
test/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  setup.cfg  setup.py
test/docs/: conf.py  installation.rst
test/test/: __init__.py
