[tool.poetry]
name = "SHOP CRUB"
version = "0.1.0"
description = ""
authors = ["shiocho <shiocho@db-user.com.tw>"]

[tool.poetry.dependencies]
python = "^3.6"
tornado = "^4.3"
sqlalchemy = "^1.0.0"
apscheduler = "^3.0.0"
pymysql = "^0.9.3"
zabbix_api = "^0.5.4"
pathlib = "^1.0.1"
grafanacli = "^1.0.9"
pdfkit = "^0.6.1"
jinja2 = "^2.11.2"
seaborn = "^0.10.0"
IPython = "^7.13.0"
pyPDF2 = "^1.26.0"
HTMLParser = "^0.0.2"
elasticsearch = "7.6.0"
elasticsearch_dsl = "^7.1.0"
xmltodict = "^0.12.0"
wkhtmltopdf = "^0.2"
ndscheduler = {path = "./ndscheduler-0.1.0-py3-none-any.whl"}
dicttoxml = "^1.7.4"


[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
rope = "^0.17.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
